Added some fix.

--- a/pastelka/price.html
+++ b/pastelka/price.html
@@ -571,7 +571,7 @@
 
                 <div class="headerTop">
                     <div class="row">
-                        <div class="col-md-10 hidden-xs hidden-sm">
+                        <div class="col-md-10 col-lg-11 hidden-xs hidden-sm">
                             <nav class="topMenu">
                                 <ul class="topMenuList">
                                     <li class="topMenuItem"><a class="topMenuLink" href="#">О магазине</a></li>
@@ -585,7 +585,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="col-xs-5 col-md-2 pull-right">
+                        <div class="pull-right">
                             <div class="enterToSite">
                                 <button class="logIn" data-toggle="modal" data-target="#modalLogin">
                                     <span class="icon-enter"></span>
