--- a/pastelka/section.html
+++ b/pastelka/section.html
@@ -1396,7 +1396,153 @@
                 </div>
 
                 <div class="sectionBlockProducts">
-
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="sectionBlockProduct">
+                                <a class="sectionBlockProductLink" href="">
+                                    <img class="sectionBlockProductImage" src="image/productSection1.jpg" alt=""/>
+                                    <p class="sectionBlockProductText">Одеяла</p>
+                                </a>
+                            </div>
+                            <div class="sectionBlockProduct">
+                                <a class="sectionBlockProductLink" href="">
+                                    <img class="sectionBlockProductImage" src="image/productSection2.jpg" alt=""/>
+                                    <p class="sectionBlockProductText">Постельное белье</p>
+                                </a>
+                            </div>
+                            <div class="sectionBlockProduct">
+                                <a class="sectionBlockProductLink" href="">
+                                    <img class="sectionBlockProductImage" src="image/productSection1.jpg" alt=""/>
+                                    <p class="sectionBlockProductText">Одеяла</p>
+                                </a>
+                            </div>
+                            <div class="sectionBlockProduct">
+                                <a class="sectionBlockProductLink" href="">
+                                    <img class="sectionBlockProductImage" src="image/productSection2.jpg" alt=""/>
+                                    <p class="sectionBlockProductText">Постельное белье</p>
+                                </a>
+                            </div>
+                            <div class="sectionBlockProduct">
+                                <a class="sectionBlockProductLink" href="">
+                                    <img class="sectionBlockProductImage" src="image/productSection3.jpg" alt=""/>
+                                    <p class="sectionBlockProductText">Матрасы</p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="sectionBlockProduct">
+                                <a class="sectionBlockProductLink" href="">
+                                    <img class="sectionBlockProductImage" src="image/productSection4.jpg" alt=""/>
+                                    <p class="sectionBlockProductText">Подушки</p>
+                                </a>
+                            </div>
+                            <div class="sectionBlockProduct">
+                                <a class="sectionBlockProductLink" href="">
+                                    <img class="sectionBlockProductImage" src="image/productSection5.jpg" alt=""/>
+                                    <p class="sectionBlockProductText">Покрывала</p>
+                                </a>
+                            </div>
+                            <div class="sectionBlockProduct">
+                                <a class="sectionBlockProductLink" href="">
+                                    <img class="sectionBlockProductImage" src="image/productSection4.jpg" alt=""/>
+                                    <p class="sectionBlockProductText">Подушки</p>
+                                </a>
+                            </div>
+                            <div class="sectionBlockProduct">
+                                <a class="sectionBlockProductLink" href="">
+                                    <img class="sectionBlockProductImage" src="image/productSection5.jpg" alt=""/>
+                                    <p class="sectionBlockProductText">Покрывала</p>
+                                </a>
+                            </div>
+                            <div class="sectionBlockProduct">
+                                <a class="sectionBlockProductLink" href="">
+                                    <img class="sectionBlockProductImage" src="image/productSection6.jpg" alt=""/>
+                                    <p class="sectionBlockProductText">Одежда</p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="viewedProducts">
+                                <div class="viewedProductsTitle">Просмотренные товары</div>
+                                <div class="wrapVerticalSlider">
+                                    <div id="arrow-up" class="verticalSliderArrow verticalSliderArrowUp"></div>
+                                    <ul id="verticalSlider">
+                                        <li class="verticalSliderItem">
+                                            <a class="verticalSliderContentLink" href="">
+                                                <div class="verticalSliderContentImage">
+                                                    <img class="verticalSliderImage" src="image/verticalSlider1.jpg" alt=""/>
+                                                </div>
+                                                <div class="verticalSliderContentInfo">
+                                                    <h3 class="verticalSliderInfoTitle">Постельное белье Zastelli Дисней</h3>
+                                                    <div class="verticalSliderContentBottom">
+                                                        <div class="verticalSliderPrice">750 грн</div>
+                                                        <span class="icon-bag-full"></span>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li class="verticalSliderItem">
+                                            <a class="verticalSliderContentLink" href="">
+                                                <div class="verticalSliderContentImage">
+                                                    <img class="verticalSliderImage" src="image/verticalSlider2.jpg" alt=""/>
+                                                </div>
+                                                <div class="verticalSliderContentInfo">
+                                                    <h3 class="verticalSliderInfoTitle">Постельное белье Zastelli Дисней</h3>
+                                                    <div class="verticalSliderContentBottom">
+                                                        <div class="verticalSliderPrice">750 грн</div>
+                                                        <span class="icon-bag-full"></span>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li class="verticalSliderItem">
+                                            <a class="verticalSliderContentLink" href="">
+                                                <div class="verticalSliderContentImage">
+                                                    <img class="verticalSliderImage" src="image/verticalSlider3.jpg" alt=""/>
+                                                </div>
+                                                <div class="verticalSliderContentInfo">
+                                                    <h3 class="verticalSliderInfoTitle">Постельное белье Zastelli Дисней</h3>
+                                                    <div class="verticalSliderContentBottom">
+                                                        <div class="verticalSliderPrice">750 грн</div>
+                                                        <span class="icon-bag-full"></span>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li class="verticalSliderItem">
+                                            <a class="verticalSliderContentLink" href="">
+                                                <div class="verticalSliderContentImage">
+                                                    <img class="verticalSliderImage" src="image/verticalSlider4.jpg" alt=""/>
+                                                </div>
+                                                <div class="verticalSliderContentInfo">
+                                                    <h3 class="verticalSliderInfoTitle">Постельное белье Zastelli Дисней</h3>
+                                                    <div class="verticalSliderContentBottom">
+                                                        <div class="verticalSliderPrice">750 грн</div>
+                                                        <span class="icon-bag-full"></span>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li class="verticalSliderItem">
+                                            <a class="verticalSliderContentLink" href="">
+                                                <div class="verticalSliderContentImage">
+                                                    <img class="verticalSliderImage" src="image/verticalSlider3.jpg" alt=""/>
+                                                </div>
+                                                <div class="verticalSliderContentInfo">
+                                                    <h3 class="verticalSliderInfoTitle">Постельное белье Zastelli Дисней</h3>
+                                                    <div class="verticalSliderContentBottom">
+                                                        <div class="verticalSliderPrice">750 грн</div>
+                                                        <span class="icon-bag-full"></span>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <div id="arrow-down" class="verticalSliderArrow verticalSliderArrowDown"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1595,11 +1741,31 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.3/js/bootstrap-select.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/jquery.dlmenu.js"></script>
+<script src="js/anythingSlider.js"></script>
 <script>
     $(function() {
         $( '#dl-menu' ).dlmenu({
             animationClasses : { classin : 'dl-animate-in-2', classout : 'dl-animate-out-2' }
         });
+    });
+
+    $('#verticalSlider').anythingSlider({
+
+        // If true, all panels will slide vertically; they slide horizontally otherwise
+        mode: 'vertical',
+        hashTags: false,
+        resizeContents: false,
+        buildStartStop: false,
+        buildNavigation: false,
+        autoPlay: false,
+        autoPlayLocked: true,
+        appendForwardTo: $('#arrow-up'),
+        appendBackTo: $('#arrow-down'),
+        delay               : 15000,      // How long between slideshow transitions in AutoPlay mode (in milliseconds)
+        resumeDelay         : 15000,     // Resume slideshow after user interaction, only if autoplayLocked is true (in milliseconds).
+        animationTime       : 600,
+        showMultiple: 4
+
     });
 </script>
 <script src="js/main.js"></script>
