Added modal windows. Some fix. Serch not found result.

--- a/pastelka/indexNotFound.html
+++ b/pastelka/indexNotFound.html
@@ -887,51 +887,9 @@
                                         <div class="closeIcon">
                                             <span class="icon-close"></span>
                                         </div>
-                                        <a class="searchResult" href="">
-                                            <div class="wrapSearchResultImage">
-                                                <img class="searchResultImage" src="image/searchResult.png" alt=""/>
-                                            </div>
-                                            <div class="searchResultImageInfo">
-                                                <div class="resultImageInfoTitle">Постельное белье Zastelli Дисней полуторный София  и ее друзья</div>
-                                                <div class="resultImageInfoArticle">Артикул: 25486</div>
-                                                <div class="resultImageInfoPrice">2 184 грн</div>
-                                            </div>
-                                        </a>
-                                        <a class="searchResult" href="">
-                                            <div class="wrapSearchResultImage">
-                                                <img class="searchResultImage" src="image/searchResult.png" alt=""/>
-                                            </div>
-                                            <div class="searchResultImageInfo">
-                                                <div class="resultImageInfoTitle">Постельное белье Zastelli Дисней полуторный София  и ее друзья</div>
-                                                <div class="resultImageInfoArticle">Артикул: 25486</div>
-                                                <div class="resultImageInfoPrice">2 184 грн</div>
-                                            </div>
-                                        </a>
-                                        <a class="searchResult" href="">
-                                            <div class="wrapSearchResultImage">
-                                                <img class="searchResultImage" src="image/searchResult.png" alt=""/>
-                                            </div>
-                                            <div class="searchResultImageInfo">
-                                                <div class="resultImageInfoTitle">Постельное белье Zastelli Дисней полуторный София  и ее друзья</div>
-                                                <div class="resultImageInfoArticle">Артикул: 25486</div>
-                                                <div class="resultImageInfoPrice">2 184 грн</div>
-                                            </div>
-                                        </a>
-                                        <a class="searchResult" href="">
-                                            <div class="wrapSearchResultImage">
-                                                <img class="searchResultImage" src="image/searchResult.png" alt=""/>
-                                            </div>
-                                            <div class="searchResultImageInfo">
-                                                <div class="resultImageInfoTitle">Постельное белье Zastelli Дисней полуторный София  и ее друзья</div>
-                                                <div class="resultImageInfoArticle">Артикул: 25486</div>
-                                                <div class="resultImageInfoPrice">2 184 грн</div>
-                                            </div>
-                                        </a>
-                                        <div class="wrapSearchResultBtn">
-                                            <a class="searchResultBtn">
-                                                <span class="resultBtn">Все результаты поиска</span>
-                                                <span class="icon-next"></span>
-                                            </a>
+                                        <div class="searchResultNotFound">
+                                            <p class="searchResultNotFoundText">К сожалению, ничего не найдено.</p>
+                                            <p class="searchResultNotFoundText">Попробуйте ввести более точные ключевые слова</p>
                                         </div>
                                     </div>
                                 </div>
@@ -2204,8 +2162,8 @@
             <div class="container">
                 <div class="row">
                     <div id="carouselOffers" class="carousel slide">
-                       <div class="wrapOfferCarousel">
-                           <div class="carousel-inner">
+                        <div class="wrapOfferCarousel">
+                            <div class="carousel-inner">
                                 <div class="item active">
                                     <div class="row">
                                         <div class="col-sm-4">
@@ -2258,60 +2216,60 @@
                                         </div>
                                     </div>
                                 </div>
-                               <div class="item">
-                                   <div class="row">
-                                       <div class="col-sm-4">
-                                           <div class="thumbnail">
-                                               <div class="specialOffer">
-                                                   <a class="specialOfferImageLink" href="" data-toggle="modal" data-target="#quickView">
-                                                       <img class="specialOfferImage" src="image/offer1.jpg" alt="">
-                                                       <div class="fastView">Быстрый просмотр</div>
-                                                   </a>
-                                                   <div class="specialOfferInfo">
-                                                       <a class="specialOfferTitleLink" href="">Постельное белье Zastelli Дисней полуторный София  и ее друзья</a>
-                                                       <div class="specialOfferType">Для спальни</div>
-                                                       <div class="specialOfferPrice">2 184 грн</div>
-                                                       <button class="cartBtn">В корзину</button>
-                                                   </div>
-                                               </div>
-                                           </div>
-                                       </div>
-                                       <div class="col-sm-4">
-                                           <div class="thumbnail">
-                                               <div class="specialOffer">
-                                                   <a class="specialOfferImageLink" href="" data-toggle="modal" data-target="#quickView">
-                                                       <img class="specialOfferImage" src="image/offer2.jpg" alt="">
-                                                       <div class="fastView">Быстрый просмотр</div>
-                                                   </a>
-                                                   <div class="specialOfferInfo">
-                                                       <a class="specialOfferTitleLink" href="">Постельное белье Zastelli Дисней полуторный София  и ее друзья</a>
-                                                       <div class="specialOfferType">Нижнее белье</div>
-                                                       <div class="specialOfferPrice">1 250 грн</div>
-                                                       <button class="cartBtn">В корзину</button>
-                                                   </div>
-                                               </div>
-                                           </div>
-                                       </div>
-                                       <div class="col-sm-4">
-                                           <div class="thumbnail">
-                                               <div class="specialOffer">
-                                                   <a class="specialOfferImageLink" href="" data-toggle="modal" data-target="#quickView">
-                                                       <img class="specialOfferImage" src="image/offer3.jpg" alt="">
-                                                       <div class="fastView">Быстрый просмотр</div>
-                                                   </a>
-                                                   <div class="specialOfferInfo">
-                                                       <a class="specialOfferTitleLink" href="">Постельное белье Zastelli Дисней полуторный София  и ее друзья</a>
-                                                       <div class="specialOfferType">Для детской</div>
-                                                       <div class="specialOfferPrice">750 грн</div>
-                                                       <button class="cartBtn">В корзину</button>
-                                                   </div>
-                                               </div>
-                                           </div>
-                                       </div>
-                                   </div>
+                                <div class="item">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <div class="thumbnail">
+                                                <div class="specialOffer">
+                                                    <a class="specialOfferImageLink" href="" data-toggle="modal" data-target="#quickView">
+                                                        <img class="specialOfferImage" src="image/offer1.jpg" alt="">
+                                                        <div class="fastView">Быстрый просмотр</div>
+                                                    </a>
+                                                    <div class="specialOfferInfo">
+                                                        <a class="specialOfferTitleLink" href="">Постельное белье Zastelli Дисней полуторный София  и ее друзья</a>
+                                                        <div class="specialOfferType">Для спальни</div>
+                                                        <div class="specialOfferPrice">2 184 грн</div>
+                                                        <button class="cartBtn">В корзину</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="thumbnail">
+                                                <div class="specialOffer">
+                                                    <a class="specialOfferImageLink" href="" data-toggle="modal" data-target="#quickView">
+                                                        <img class="specialOfferImage" src="image/offer2.jpg" alt="">
+                                                        <div class="fastView">Быстрый просмотр</div>
+                                                    </a>
+                                                    <div class="specialOfferInfo">
+                                                        <a class="specialOfferTitleLink" href="">Постельное белье Zastelli Дисней полуторный София  и ее друзья</a>
+                                                        <div class="specialOfferType">Нижнее белье</div>
+                                                        <div class="specialOfferPrice">1 250 грн</div>
+                                                        <button class="cartBtn">В корзину</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="thumbnail">
+                                                <div class="specialOffer">
+                                                    <a class="specialOfferImageLink" href="" data-toggle="modal" data-target="#quickView">
+                                                        <img class="specialOfferImage" src="image/offer3.jpg" alt="">
+                                                        <div class="fastView">Быстрый просмотр</div>
+                                                    </a>
+                                                    <div class="specialOfferInfo">
+                                                        <a class="specialOfferTitleLink" href="">Постельное белье Zastelli Дисней полуторный София  и ее друзья</a>
+                                                        <div class="specialOfferType">Для детской</div>
+                                                        <div class="specialOfferPrice">750 грн</div>
+                                                        <button class="cartBtn">В корзину</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
 
-                               </div>
-                           </div>
+                                </div>
+                            </div>
                         </div>
                         <a class="left carousel-control" href="#carouselOffers" data-slide="prev">
                             <span class="icon-previous-slim"></span>
