--- a/pastelka/index.html
+++ b/pastelka/index.html
@@ -758,7 +758,7 @@
                                                 </div>
                                                 <div class="headerInfoCart">
                                                     <div class="infoCartIcon">
-                                                        <span class="icon-bag"></span>
+                                                        <span class="icon-bag" data-toggle="modal" data-target="#modalCart"></span>
                                                     </div>
                                                     <div class="infoCart">
                                                         <a class="infoCartTitleLink" data-toggle="modal" data-target="#modalCart" href="#">Корзина</a>
@@ -2879,6 +2879,20 @@
         </div>
     </footer>
     <!--END footer-->
+
+    <!--START scroll-top/bottom-->
+    <div class="wrapScroll">
+        <div class="scroll scrollTop _scrollTop">
+            <span class="icon-up"></span>
+        </div>
+        <div class="scrollCircle">
+            <span class="circle"></span>
+        </div>
+        <div class="scroll scrollBottom _scrollBottom">
+            <span class="icon-down"></span>
+        </div>
+    </div>
+    <!--END scrol-top/bottom-->
 
 </div>
 
